syntax = "proto3";

package configure_resource;
option go_package = "./v1;v1";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "configure_resource.proto";


service Service {
  rpc PageResource (PageResourceRequest) returns (PageResourceReply) {
    option (google.api.http) = {
      get: "/configure/v1/resources"
    };
  }

  rpc AddResource (AddResourceRequest) returns (AddResourceReply) {
    option (google.api.http) = {
      post: "/configure/v1/resource",
      body:"*"
    };
  }

  rpc UpdateResource (UpdateResourceRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/configure/v1/resource",
      body:"*"
    };
  }

  rpc DeleteResource (DeleteResourceRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/configure/v1/resource"
    };
  }

  rpc GetResourceServerIds (GetResourceServerIdsRequest) returns (GetResourceServerIdsReply) {
    option (google.api.http) = {
      get: "/configure/v1/resource/server/ids",
    };
  }

  rpc GetResourceValues (GetResourceValuesRequest) returns (GetResourceValuesReply) {
    option (google.api.http) = {
      get: "/configure/v1/resource/values",
    };
  }

  rpc UpdateResourceValues (UpdateResourceValuesRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/configure/v1/resource/values",
      body:"*"
    };
  }
}